# nextcode

./: @why3  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OWNERS.TXT  CONTRIBUTING.md  MANIFEST.examples  Makefile  README.md  spark2014vsn.adb  spark2014vsn.ads
Basic/: Assertions.cpp  BlockList.cpp  CASOptions.cpp  CMakeLists.txt  Cache.cpp  ClusteredBitVector.cpp  EditorPlaceholder.cpp  JSONSerialization.cpp  LangOptions.cpp  Mangler.cpp  PartsOfSpeech.def  Platform.cpp  PrefixMap.cpp  Program.cpp  QuotedString.cpp  Sandbox.cpp  SmallBitVector.cpp  TargetInfo.cpp  ThreadSafeRefCounted.cpp  UUID.cpp  UnicodeExtendedGraphemeClusters.cpp.gyb
Basic/Darwin/: Cache-Mac.inc
Basic/Default/: TaskQueue.inc
include/nextcode/: CMakeLists.txt  Config.h.in  Strings.h  Subsystems.h
lib/ClangImporter/: CFDatabase.def  CFTypeInfo.cpp  CFTypeInfo.h  CMakeLists.txt  ClangAdapter.cpp  ClangAdapter.h  ClangClassTemplateNamePrinter.cpp  ClangClassTemplateNamePrinter.h  ClangDerivedConformances.cpp  ClangDerivedConformances.h  ClangDiagnosticConsumer.cpp  ClangDiagnosticConsumer.h  ClangImporter.cpp  ClangImporterRequests.cpp  ClangIncludePaths.cpp  ClangIncludePaths.h  ClangModuleDependencyScanner.cpp  ClangSourceBufferImporter.cpp  ClangSourceBufferImporter.h  DWARFImporter.cpp  ImportDecl.cpp  ImportEnumInfo.cpp  ImportEnumInfo.h  ImportMacro.cpp  ImportName.cpp  ImportName.h  ImportType.cpp  ImporterImpl.h  InferredAttributes.def  MacroTable.def  MappedTypes.def  NeXTCodeDeclSynthesizer.cpp  NeXTCodeDeclSynthesizer.h  NeXTCodeLookupTable.cpp  NeXTCodeLookupTable.h  Serializability.cpp  SortedCFDatabase.def.gyb
lib/CompilerNeXTCodeSyntax/: CMakeLists.txt
lib/DependencyScan/: CMakeLists.txt  DependencyScanJSON.cpp  DependencyScanningTool.cpp  ModuleDependencyCacheSerialization.cpp  ModuleDependencyScanner.cpp  ScanDependencies.cpp  StringUtils.cpp
lib/Driver/: Action.cpp  CMakeLists.txt  Compilation.cpp  DarwinToolChains.cpp  Driver.cpp  FrontendUtil.cpp  Job.cpp  PrettyStackTrace.cpp  ToolChain.cpp  ToolChains.cpp  ToolChains.h  UnixToolChains.cpp  WebAssemblyToolChains.cpp  WindowsToolChains.cpp
lib/DriverTool/: CMakeLists.txt  NeXTCodeCacheToolOptions.td  autolink_extract_main.cpp  driver.cpp  modulewrap_main.cpp  nextcode_api_digester_main.cpp  nextcode_cache_tool_main.cpp  nextcode_indent_main.cpp  nextcode_parse_test_main.cpp  sil_func_extractor_main.cpp  sil_llvm_gen_main.cpp  sil_nm_main.cpp  sil_opt_main.cpp  sil_passpipeline_dumper_main.cpp  swift_dependency_tool_main.cpp  swift_llvm_opt_main.cpp  swift_symbolgraph_extract_main.cpp
lib/Frontend/: ArgsToFrontendInputsConverter.cpp  ArgsToFrontendInputsConverter.h  ArgsToFrontendOptionsConverter.cpp  ArgsToFrontendOptionsConverter.h  ArgsToFrontendOutputsConverter.cpp  ArgsToFrontendOutputsConverter.h  CASOutputBackends.cpp  CMakeLists.txt  CachedDiagnostics.cpp  CachingUtils.cpp  CompileJobCacheKey.cpp  CompileJobCacheResult.cpp  CompilerInvocation.cpp  DependencyVerifier.cpp  DiagnosticHelper.cpp  DiagnosticVerifier.cpp  Frontend.cpp  FrontendInputsAndOutputs.cpp  FrontendOptions.cpp  ModuleInterfaceBuilder.cpp  ModuleInterfaceBuilder.h  ModuleInterfaceLoader.cpp  ModuleInterfaceSupport.cpp  PrintingDiagnosticConsumer.cpp  Serialization.cpp  SerializedDiagnosticConsumer.cpp
lib/FrontendTool/: CMakeLists.txt  Dependencies.h  FrontendTool.cpp  ImportedModules.cpp  LoadedModuleTrace.cpp  MakeStyleDependencies.cpp  TBD.cpp  TBD.h
lib/IDE/: APIDigesterData.cpp  AfterPoundExprCompletion.cpp  ArgumentCompletion.cpp  CMakeLists.txt  CodeCompletion.cpp  CodeCompletionCache.cpp  CodeCompletionContext.cpp  CodeCompletionDiagnostics.cpp  CodeCompletionDiagnostics.h  CodeCompletionResult.cpp  CodeCompletionResultBuilder.cpp  CodeCompletionResultBuilder.h  CodeCompletionResultPrinter.cpp  CodeCompletionResultType.cpp  CodeCompletionString.cpp  CodeCompletionStringPrinter.cpp  CommentConversion.cpp  CompletionLookup.cpp  CompletionOverrideLookup.cpp  ConformingMethodList.cpp  CursorInfo.cpp  ExprCompletion.cpp  ExprContextAnalysis.cpp  ExprContextAnalysis.h  Formatting.cpp  FuzzyStringMatcher.cpp  IDEBridging.cpp  IDERequests.cpp  IDETypeChecking.cpp  ImportDepth.cpp  KeyPathCompletion.cpp  ModuleInterfacePrinting.cpp  NeXTCodeSourceDocInfo.cpp  PostfixCompletion.cpp  REPLCodeCompletion.cpp  SelectedOverloadInfo.cpp  SourceEntityWalker.cpp  SyntaxModel.cpp  TypeCheckCompletionCallback.cpp  TypeContextInfo.cpp  (+2 more)
lib/IDETool/: CMakeLists.txt  CompileInstance.cpp  CompilerInvocation.cpp  DependencyChecking.cpp  DependencyChecking.h  IDEInspectionInstance.cpp  SyntacticMacroExpansion.cpp
lib/Immediate/: CMakeLists.txt  Immediate.cpp  ImmediateImpl.h  NeXTCodeMaterializationUnit.cpp
lib/LLVMPasses/: ARCEntryPointBuilder.h  CMakeLists.txt  LLVMARCContract.cpp  LLVMARCOpts.cpp  LLVMARCOpts.h  LLVMInlineTree.cpp  LLVMMergeFunctions.cpp  LLVMNeXTCodeAA.cpp  LLVMSwift.def  LLVMSwiftRCIdentity.cpp
lib/Macros/: CMakeLists.txt
lib/NeXTCodeDemangle/: CMakeLists.txt  MangleHack.cpp  NeXTCodeDemangle.cpp
lib/NeXTCodeRemoteInspection/: CMakeLists.txt
lib/NeXTCodeRemoteMirror/: CMakeLists.txt
lib/NeXTCodeSyntax/: CMakeLists.txt
lib/Option/: CMakeLists.txt  Options.cpp  SanitizerOptions.cpp
lib/Parse/: CMakeLists.txt  Confusables.cpp  Lexer.cpp  ParseBridging.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseGeneric.cpp  ParseIfConfig.cpp  ParsePattern.cpp  ParseRegex.cpp  ParseRequests.cpp  ParseStmt.cpp  ParseType.cpp  ParseVersion.cpp  Parser.cpp  PersistentParserState.cpp
lib/PrintAsClang/: CMakeLists.txt  ClangSyntaxPrinter.cpp  ClangSyntaxPrinter.h  DeclAndTypePrinter.cpp  DeclAndTypePrinter.h  ModuleContentsWriter.cpp  ModuleContentsWriter.h  NeXTCodeToClangInteropContext.h  OutputLanguageMode.h  PrimitiveTypeMapping.cpp  PrimitiveTypeMapping.h  PrintAsClang.cpp  PrintClangClassType.cpp  PrintClangClassType.h  PrintClangFunction.cpp  PrintClangFunction.h  PrintClangValueType.cpp  PrintClangValueType.h  PrintNeXTCodeToClangCoreScaffold.cpp  PrintNeXTCodeToClangCoreScaffold.h  SwiftToClangInteropContext.cpp  (+2 more)
tools/: CMakeLists.txt
(+2840 files in other folders)
